--- a/운전면허반납/index.html
+++ b/운전면허반납/index.html
@@ -40,18 +40,18 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- 상단 광고 -->
-    <div class="ad-container">
-        <ins class="adsbygoogle main-ad"
-            style="display:block"
-            data-ad-client="ca-pub-9374368296307755"
-            data-ad-slot="3201247599"
-            data-ad-format="auto"
-            data-full-width-responsive="true"></ins>
-    </div>
-
     <div class="container">
         <div class="test-container">
+            <!-- [광고] 페이지 상단 (slot: 3201247599) -->
+            <div class="ad-container top" id="adTop" style="text-align:center; margin:16px 0;">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-9374368296307755"
+                     data-ad-slot="3201247599"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
+
             <!-- 시작 페이지 -->
             <div class="start-page" id="startPage">
                 <div class="title-section">
@@ -139,6 +139,16 @@
                     </div>
                 </div>
 
+                <!-- [광고] 질문 중간 (slot: 1966797795) -->
+                <div class="ad-container mid" id="adMid" style="text-align:center; margin:16px 0; display:none;">
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-9374368296307755"
+                         data-ad-slot="1966797795"
+                         data-ad-format="auto"
+                         data-full-width-responsive="true"></ins>
+                </div>
+
                 <div class="question-content">
                     <h2 class="question-title"></h2>
                     <div class="question-options"></div>
@@ -157,6 +167,17 @@
 
                 <div class="result-content">
                     <div class="benefits-summary"></div>
+                    
+                    <!-- [광고] 결과 페이지 중간 (slot: 4448942166) -->
+                    <div class="ad-container result" id="adResult" style="text-align:center; margin:16px 0; display:none;">
+                        <ins class="adsbygoogle"
+                             style="display:block"
+                             data-ad-client="ca-pub-9374368296307755"
+                             data-ad-slot="4448942166"
+                             data-ad-format="auto"
+                             data-full-width-responsive="true"></ins>
+                    </div>
+                    
                     <div class="detailed-benefits"></div>
                     <div class="application-guide"></div>
                 </div>
@@ -277,8 +298,5 @@
     </div>
 
     <script src="script.js"></script>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
 </body>
 </html>
