--- a/주유할인카드/index.html
+++ b/주유할인카드/index.html
@@ -62,17 +62,14 @@
     </script>
 </head>
 <body>
-    <!-- 상단 광고 -->
-    <div class="ad-container">
+    <!-- 상단 광고 (k-test 상단) - 새로 수정 -->
+    <div class="ad-container top">
         <ins class="adsbygoogle"
              style="display:block"
              data-ad-client="ca-pub-9374368296307755"
              data-ad-slot="3201247599"
              data-ad-format="auto"
              data-full-width-responsive="true"></ins>
-        <script>
-             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
     </div>
 
     <div class="container">
@@ -125,16 +122,14 @@
                 </div>
             </div>
 
-            <!-- 질문 중간 광고 -->
-            <div class="question-mid-ad" id="questionMidAd" style="display: none;">
-                <div class="ad-container">
-                    <ins class="adsbygoogle"
-                         style="display:block"
-                         data-ad-client="ca-pub-9374368296307755"
-                         data-ad-slot="1966797795"
-                         data-ad-format="auto"
-                         data-full-width-responsive="true"></ins>
-                </div>
+            <!-- 중간 광고 (3번째 질문 후) - 새로 수정 -->
+            <div class="ad-container mid" style="display: none;">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-9374368296307755"
+                     data-ad-slot="1966797795"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
             </div>
 
             <div class="question" id="question4" style="display: none;">
@@ -211,16 +206,14 @@
                         <div id="detailedBenefits"></div>
                     </div>
 
-                    <!-- 결과 페이지 중간 광고 -->
-                    <div class="result-mid-ad">
-                        <div class="ad-container">
-                            <ins class="adsbygoogle"
-                                 style="display:block"
-                                 data-ad-client="ca-pub-9374368296307755"
-                                 data-ad-slot="4448942166"
-                                 data-ad-format="auto"
-                                 data-full-width-responsive="true"></ins>
-                        </div>
+                    <!-- 결과 광고 (k-test 슬롯3) - 새로 수정 -->
+                    <div class="ad-container result" style="display: none;">
+                        <ins class="adsbygoogle"
+                             style="display:block"
+                             data-ad-client="ca-pub-9374368296307755"
+                             data-ad-slot="4448942166"
+                             data-ad-format="auto"
+                             data-full-width-responsive="true"></ins>
                     </div>
 
                     <div class="useful-sites">
