--- a/연예인닮은꼴/index.html
+++ b/연예인닮은꼴/index.html
@@ -87,17 +87,14 @@
     <main class="main-container">
         <div class="container">
             
-            <!-- 상단 광고 -->
-            <div class="ad-container top">
+            <!-- [광고] 페이지 상단 (slot: 3201247599) -->
+            <div class="ad-container top" id="adTop" style="text-align:center; margin:16px 0;">
                 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-9374368296307755"
                      data-ad-slot="3201247599"
                      data-ad-format="auto"
                      data-full-width-responsive="true"></ins>
-                <script>
-                     (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
             </div>
 
             <!-- 소개 섹션 -->
@@ -175,6 +172,16 @@
                 </div>
             </section>
 
+            <!-- [광고] 질문 중간 (slot: 1966797795) -->
+            <div class="ad-container mid" id="adMid" style="text-align:center; margin:16px 0; display:none;">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-9374368296307755"
+                     data-ad-slot="1966797795"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
+
             <!-- 분석 중 섹션 -->
             <section class="analyzing-section" id="analyzingSection" style="display: none;">
                 <div class="analyzing-animation">
@@ -211,19 +218,26 @@
                 <div class="result-container">
                     <!-- 결과는 JavaScript로 동적 생성 -->
                 </div>
+                
+                <!-- [광고] 결과 페이지 중간 (slot: 4448942166) -->
+                <div class="ad-container result" id="adResult" style="text-align:center; margin:16px 0; display:none;">
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-9374368296307755"
+                         data-ad-slot="4448942166"
+                         data-ad-format="auto"
+                         data-full-width-responsive="true"></ins>
+                </div>
             </section>
 
             <!-- 하단 광고 -->
-            <div class="ad-container bottom">
+            <div class="ad-container bottom" style="display:none;">
                 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-9374368296307755"
                      data-ad-slot="1724698171"
                      data-ad-format="auto"
                      data-full-width-responsive="true"></ins>
-                <script>
-                     (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
             </div>
 
         </div>
