--- a/유튜브음악다운로드/index.html
+++ b/유튜브음악다운로드/index.html
@@ -71,17 +71,14 @@
                 <p class="subtitle">무료로 안전하게 음악을 다운받는 완전한 방법</p>
             </div>
 
-            <!-- 광고 -->
+            <!-- 상단 광고 (k-test 상단) -->
             <div class="ad-container top">
                 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-9374368296307755"
-                     data-ad-slot="7259896726"
+                     data-ad-slot="3201247599"
                      data-ad-format="auto"
                      data-full-width-responsive="true"></ins>
-                <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
             </div>
 
             <div class="intro-section">
@@ -148,6 +145,16 @@
                 <p id="questionDescription" class="question-description"></p>
                 <div id="answersContainer" class="answers-container"></div>
             </div>
+
+            <!-- 중간 광고 (3번째 질문 후) - k-test 슬롯2 -->
+            <div id="midAd" class="ad-container mid" style="display: none;">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-9374368296307755"
+                     data-ad-slot="1966797795"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
         </div>
 
         <!-- 분석 모달 -->
@@ -186,15 +193,7 @@
                     </div>
                 </div>
 
-                <!-- 팝업 광고 -->
-                <div class="popup-ad-space">
-                    <ins class="adsbygoogle popup-ad"
-                         style="display:inline-block"
-                         data-ad-client="ca-pub-9374368296307755"
-                         data-ad-slot="3201247599"
-                         data-ad-format="rectangle"
-                         data-full-width-responsive="false"></ins>
-                </div>
+                <!-- 팝업 광고 제거됨 -->
             </div>
         </div>
 
@@ -209,6 +208,17 @@
             <div class="result-content">
                 <div class="recommended-method"></div>
                 <div class="site-recommendations"></div>
+                
+                <!-- 결과 페이지 중간 광고 - k-test 슬롯3 -->
+                <div id="resultAd" class="ad-container result">
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-9374368296307755"
+                         data-ad-slot="4448942166"
+                         data-ad-format="auto"
+                         data-full-width-responsive="true"></ins>
+                </div>
+                
                 <div class="step-by-step"></div>
                 <div class="safety-tips"></div>
             </div>
