--- a/전기요금/index.html
+++ b/전기요금/index.html
@@ -90,18 +90,14 @@
 </head>
 
 <body>
-    <!-- 상단 광고 -->
+    <!-- 상단 광고 (k-test 상단) - 새로 수정 -->
     <div class="ad-container top">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <ins class="adsbygoogle"
              style="display:block"
              data-ad-client="ca-pub-9374368296307755"
-             data-ad-slot="1234567890"
+             data-ad-slot="3201247599"
              data-ad-format="auto"
              data-full-width-responsive="true"></ins>
-        <script>
-             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
     </div>
 
     <!-- 시작 페이지 -->
@@ -207,6 +203,16 @@
         </div>
     </div>
 
+    <!-- 중간 광고 (3번째 질문 후) - 새로 추가 -->
+    <div class="ad-container mid" style="display: none;">
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-9374368296307755"
+             data-ad-slot="1966797795"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+    </div>
+
     <!-- 로딩 페이지 -->
     <div id="loadingPage" class="page hidden">
         <div class="container">
@@ -252,18 +258,14 @@
                     </div>
                 </div>
 
-                <!-- 팝업 광고 영역 -->
-                <div class="ad-container popup">
-                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- 결과 광고 (k-test 슬롯3) - 새로 수정 -->
+                <div class="ad-container result" style="display: none;">
                     <ins class="adsbygoogle"
                          style="display:block"
                          data-ad-client="ca-pub-9374368296307755"
-                         data-ad-slot="9876543210"
+                         data-ad-slot="4448942166"
                          data-ad-format="auto"
                          data-full-width-responsive="true"></ins>
-                    <script>
-                         (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script>
                 </div>
 
                 <!-- 액션 버튼 -->
