--- a/정부지원대출/index.html
+++ b/정부지원대출/index.html
@@ -55,17 +55,14 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- 상단 광고 -->
+    <!-- 상단 광고 (k-test 상단) - 새로 수정 -->
     <div class="ad-container top">
         <ins class="adsbygoogle"
              style="display:block"
              data-ad-client="ca-pub-9374368296307755"
-             data-ad-slot="8257895492"
+             data-ad-slot="3201247599"
              data-ad-format="auto"
              data-full-width-responsive="true"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
     </div>
 
     <!-- 시작 페이지 -->
@@ -177,6 +174,16 @@
         </div>
     </div>
 
+    <!-- 중간 광고 (3번째 질문 후) - 새로 추가 -->
+    <div class="ad-container mid" style="display: none;">
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-9374368296307755"
+             data-ad-slot="1966797795"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+    </div>
+
     <!-- 분석 모달 -->
     <div id="analysisModal" class="modal hidden">
         <div class="modal-content">
@@ -254,6 +261,16 @@
                     <div class="alternative-content">
                         <!-- 대안 상품들이 동적으로 생성됩니다 -->
                     </div>
+                </div>
+
+                <!-- 결과 광고 (k-test 슬롯3) - 새로 추가 -->
+                <div class="ad-container result" style="display: none;">
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-9374368296307755"
+                         data-ad-slot="4448942166"
+                         data-ad-format="auto"
+                         data-full-width-responsive="true"></ins>
                 </div>
 
                 <div class="result-section application-guide">
