--- a/주정차/index.html
+++ b/주정차/index.html
@@ -40,9 +40,9 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- 상단 광고 -->
-    <div class="ad-container">
-        <ins class="adsbygoogle main-ad"
+    <!-- 상단 광고 (k-test 상단) - 새로 수정 -->
+    <div class="ad-container top">
+        <ins class="adsbygoogle"
             style="display:block"
             data-ad-client="ca-pub-9374368296307755"
             data-ad-slot="3201247599"
@@ -98,11 +98,32 @@
                 <div class="answers"></div>
             </div>
 
+            <!-- 중간 광고 (3번째 질문 후) - 새로 추가 -->
+            <div class="ad-container mid" style="display: none;">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-9374368296307755"
+                     data-ad-slot="1966797795"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
+
             <!-- 결과 페이지 -->
             <div class="result-page hidden" id="resultPage">
                 <h2 class="result-title">주정차 단속 알림 서비스 안내</h2>
                 <div class="result-img"></div>
                 <div class="result-content"></div>
+                
+                <!-- 결과 광고 (k-test 슬롯3) - 새로 추가 -->
+                <div class="ad-container result" style="display: none;">
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-9374368296307755"
+                         data-ad-slot="4448942166"
+                         data-ad-format="auto"
+                         data-full-width-responsive="true"></ins>
+                </div>
+                
                 <div class="result-buttons">
                     <button class="retry-btn" onclick="location.href='https://testpro.site'">다른 테스트 하기</button>
                     <div class="kakao-share">
