--- a/주차접촉사고/index.html
+++ b/주차접촉사고/index.html
@@ -52,12 +52,12 @@
     <!-- 시작 페이지 -->
     <div id="startPage" class="page">
         <div class="container">
-            <!-- 상단 광고 -->
-            <div class="ad-section">
+            <!-- 상단 광고 (k-test 상단) - 새로 수정 -->
+            <div class="ad-container top">
                 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-9374368296307755"
-                     data-ad-slot="1724698171"
+                     data-ad-slot="3201247599"
                      data-ad-format="auto"
                      data-full-width-responsive="true"></ins>
             </div>
@@ -130,6 +130,16 @@
         </div>
     </div>
 
+    <!-- 중간 광고 (3번째 질문 후) - 새로 추가 -->
+    <div class="ad-container mid" style="display: none;">
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-9374368296307755"
+             data-ad-slot="1966797795"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+    </div>
+
     <!-- 분석 모달 -->
     <div id="analysisModal" class="modal hidden">
         <div class="modal-content">
@@ -194,6 +204,16 @@
                 <div class="process-steps"></div>
                 <div class="required-documents"></div>
                 <div class="insurance-contacts"></div>
+            </div>
+
+            <!-- 결과 광고 - 새로 추가 -->
+            <div class="ad-container result">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-9374368296307755"
+                     data-ad-slot="9376659159"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
             </div>
 
             <div class="action-buttons">
