--- a/mbti/index.html
+++ b/mbti/index.html
@@ -55,6 +55,15 @@
 
     <div class="container">
         <div class="test-container">
+            <!-- [광고] 상단 광고 - 헤더 바로 아래 -->
+            <div class="ad-section" id="adTop">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-9374368296307755"
+                     data-ad-slot="3201247599"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
             <!-- 시작 페이지 -->
             <div id="start-section">
                 <!-- 히어로 섹션 -->
@@ -134,7 +143,16 @@
                 <div class="answers">
                     <button class="answer-btn" onclick="selectAnswer('A')"></button>
                     <button class="answer-btn" onclick="selectAnswer('B')"></button>
+                                <!-- [광고] 중간 광고 - 3번째 질문 후 -->
+                <div class="ad-section" id="adMid" style="display: none;">
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-9374368296307755"
+                         data-ad-slot="1966797795"
+                         data-ad-format="auto"
+                         data-full-width-responsive="true"></ins>
                 </div>
+            </div>
             </div>
 
             <!-- 결과 페이지 -->
@@ -149,6 +167,15 @@
                 <div class="result-content">
                     <h3 id="result-title"></h3>
                     <p id="result-description"></p>
+                    <!-- [광고] 결과 페이지 중간 -->
+                    <div class="ad-section" id="adResult">
+                        <ins class="adsbygoogle"
+                             style="display:block"
+                             data-ad-client="ca-pub-9374368296307755"
+                             data-ad-slot="4448942166"
+                             data-ad-format="auto"
+                             data-full-width-responsive="true"></ins>
+                    </div>
                     
                     <div class="result-details">
                         <div class="personality-traits">
