--- a/에겐/index.html
+++ b/에겐/index.html
@@ -123,7 +123,17 @@
                 <div class="answers"></div>
             </div>
 
-            <!-- 결과 페이지 -->
+                        <!-- [광고] 중간 광고 -->
+            <div class="ad-section" id="adMid" style="display: none;">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-9374368296307755"
+                     data-ad-slot="1966797795"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
+
+<!-- 결과 페이지 -->
             <div class="result-page hidden" id="resultPage">
                 <h2 class="result-title">성향 분석 결과</h2>
                 <div class="result-img"></div>
