--- a/치아보험/index.html
+++ b/치아보험/index.html
@@ -58,6 +58,16 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- 상단 광고 -->
+    <div class="ad-container top">
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-9374368296307755"
+             data-ad-slot="1724698171"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+    </div>
+
     <div class="container">
         <!-- 시작 페이지 -->
         <div id="startPage" class="page">
@@ -109,16 +119,6 @@
             </div>
         </div>
 
-        <!-- 페이지 상단 광고 (헤더 바로 아래) -->
-        <div id="headerAd" class="ad-container header-ad" style="display: none;">
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-9374368296307755"
-                 data-ad-slot="3201247599"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-        </div>
-
         <!-- 질문 페이지 -->
         <div id="questionPage" class="page hidden">
             <div class="progress-container">
@@ -134,16 +134,6 @@
                 <h2 class="question-title" id="questionTitle"></h2>
                 <p class="question-description" id="questionDescription"></p>
                 <div class="answers-container" id="answersContainer"></div>
-            </div>
-
-            <!-- 질문 중간 광고 (3번째 질문 뒤) -->
-            <div id="questionAd" class="ad-container question-ad" style="display: none;">
-                <ins class="adsbygoogle"
-                     style="display:block"
-                     data-ad-client="ca-pub-9374368296307755"
-                     data-ad-slot="1966797795"
-                     data-ad-format="auto"
-                     data-full-width-responsive="true"></ins>
             </div>
         </div>
 
@@ -207,17 +197,6 @@
             <div class="result-content">
                 <div class="waiting-period-analysis"></div>
                 <div class="recommended-products"></div>
-
-                <!-- 결과 페이지 중간 광고 (추천 카드와 상세 혜택 사이) -->
-                <div id="resultAd" class="ad-container result-ad" style="display: none;">
-                    <ins class="adsbygoogle"
-                         style="display:block"
-                         data-ad-client="ca-pub-9374368296307755"
-                         data-ad-slot="4448942166"
-                         data-ad-format="auto"
-                         data-full-width-responsive="true"></ins>
-                </div>
-
                 <div class="cost-savings"></div>
                 <div class="insurance-tips"></div>
             </div>
@@ -305,7 +284,10 @@
 
     <script src="script.js"></script>
     <script>
-        // AdSense 스크립트는 script.js에서 관리됩니다
+        // 광고 초기화
+        if (typeof adsbygoogle !== 'undefined') {
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        }
     </script>
 </body>
 </html>
