--- a/감정/index.html
+++ b/감정/index.html
@@ -43,7 +43,7 @@
     <!-- [광고] 페이지 상단 (slot: 3201247599) -->
     <div class="ad-container top" id="adTop" style="text-align:center; margin:16px 0;">
         <ins class="adsbygoogle"
-             style="display:block"
+             style="display:block; min-height:180px;"
              data-ad-client="ca-pub-9374368296307755"
              data-ad-slot="3201247599"
              data-ad-format="auto"
@@ -165,7 +165,7 @@
                     <!-- [광고] 4번째 질문 후 (slot: 1966797795) -->
                     <div class="ad-container mid" id="adMid" style="display:none; margin:24px 0; text-align:center;">
                         <ins class="adsbygoogle"
-                             style="display:block"
+                             style="display:block; min-height:200px;"
                              data-ad-client="ca-pub-9374368296307755"
                              data-ad-slot="1966797795"
                              data-ad-format="auto"
@@ -206,7 +206,7 @@
                 <!-- [광고] 결과 중간 (slot: 7851142795) -->
                 <div class="ad-container result" id="adResult" style="margin:24px 0; text-align:center;">
                     <ins class="adsbygoogle"
-                         style="display:block"
+                         style="display:block; min-height:200px;"
                          data-ad-client="ca-pub-9374368296307755"
                          data-ad-slot="7851142795"
                          data-ad-format="auto"
