--- a/감정/index.html
+++ b/감정/index.html
@@ -40,7 +40,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- [광고] 페이지 상단 (slot: 3201247599) -->
+    <!-- [광고] 페이지 상단 - k-test 상단 (slot: 3201247599) -->
     <div class="ad-container top" id="adTop" style="text-align:center; margin:16px 0;">
         <ins class="adsbygoogle"
              style="display:block; min-height:180px;"
@@ -160,7 +160,7 @@
                     
                     <h2 class="question-text"></h2>
                     
-                    <!-- [광고] 4번째 질문 후 (slot: 1966797795) -->
+                    <!-- [광고] 질문 중간 - 3번째 질문 뒤, k-test 슬롯2 (slot: 1966797795) -->
                     <div class="ad-container mid" id="adMid" style="display:none; margin:20px 0; text-align:center;">
                         <ins class="adsbygoogle"
                              style="display:block; min-height:200px;"
@@ -204,12 +204,12 @@
                     <div class="result-subtitle" id="resultSubtitle"></div>
                 </div>
 
-                <!-- [광고] 결과 중간 (slot: 7851142795) -->
+                <!-- [광고] 결과 하단 - k-test 슬롯3 (slot: 3593134392) -->
                 <div class="ad-container result" id="adResult" style="margin:24px 0; text-align:center;">
                     <ins class="adsbygoogle"
                          style="display:block; min-height:200px;"
                          data-ad-client="ca-pub-9374368296307755"
-                         data-ad-slot="7851142795"
+                         data-ad-slot="3593134392"
                          data-ad-format="auto"
                          data-full-width-responsive="true"></ins>
                 </div>
