--- a/감정/index.html
+++ b/감정/index.html
@@ -41,9 +41,9 @@
 </head>
 <body>
     <!-- [광고] 페이지 상단 - k-test 상단 (slot: 3201247599) -->
-    <div class="ad-container top" id="adTop" style="text-align:center; margin:16px 0;">
+    <div class="ad-container top" id="adTop" style="text-align:center; margin:8px 0;">
         <ins class="adsbygoogle"
-             style="display:block; min-height:180px;"
+             style="display:block; min-height:90px; max-height:100px;"
              data-ad-client="ca-pub-9374368296307755"
              data-ad-slot="3201247599"
              data-ad-format="auto"
@@ -117,7 +117,7 @@
                     </div>
                 </div>
 
-                <button class="start-btn" onclick="startTest()">
+                <button class="start-btn" id="startTestBtn" onclick="startTest()">
                     <span class="btn-icon">🚀</span>
                     내 감정 분석하기
                     <span class="btn-subtitle">무료 • 2분 완성</span>
@@ -161,9 +161,9 @@
                     <h2 class="question-text"></h2>
                     
                     <!-- [광고] 질문 중간 - 3번째 질문 뒤, k-test 슬롯2 (slot: 1966797795) -->
-                    <div class="ad-container mid" id="adMid" style="display:none; margin:20px 0; text-align:center;">
+                    <div class="ad-container mid" id="adMid" style="display:none; margin:8px 0; text-align:center;">
                         <ins class="adsbygoogle"
-                             style="display:block; min-height:200px;"
+                             style="display:block; min-height:80px; max-height:100px;"
                              data-ad-client="ca-pub-9374368296307755"
                              data-ad-slot="1966797795"
                              data-ad-format="auto"
@@ -205,9 +205,9 @@
                 </div>
 
                 <!-- [광고] 결과 하단 - k-test 슬롯3 (slot: 3593134392) -->
-                <div class="ad-container result" id="adResult" style="margin:24px 0; text-align:center;">
+                <div class="ad-container result" id="adResult" style="margin:15px 0; text-align:center;">
                     <ins class="adsbygoogle"
-                         style="display:block; min-height:200px;"
+                         style="display:block; min-height:120px; max-height:150px;"
                          data-ad-client="ca-pub-9374368296307755"
                          data-ad-slot="3593134392"
                          data-ad-format="auto"
