--- a/감정 영어/index.html
+++ b/감정 영어/index.html
@@ -274,7 +274,7 @@
                 <div class="related-tests">
                     <h3>Try Other Tests Too</h3>
                     <div class="related-grid">
-                        <a href="../스트레스/" class="related-item">
+                        <a href="../스트레스 영어/" class="related-item">
                             <div class="related-icon">😤</div>
                             <div class="related-title">Stress Test</div>
                         </a>
