--- a/에겐/index.html
+++ b/에겐/index.html
@@ -105,7 +105,7 @@
                         <div class="progress"></div>
                     </div>
                     <div class="question-counter">
-                        <span id="questionNum">1</span>/15
+                        <span id="questionNum">1/16</span>
                     </div>
                 </div>
                 
