--- a/감정/index.html
+++ b/감정/index.html
@@ -4,25 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI 기반 감정 분석 테스트 - 스트레스 관리 및 멘탈 케어 진단</title>
-    <meta name="de                        <div class="benefit-card">
-                            <div class="benefit-icon">📊</div>
-                            <h4>스트레스 수준</h4>
-                            <p>일상, 업무, 인간관계 스트레스를 세분화하여 분석</p>
-                        </div>
-                    </div>
-                    
-                    <!-- 중간 네이티브 광고 -->
-                    <div class="ad-mid-native" id="adMidNative3">
-                        <div class="ad-label">스트레스 관리</div>
-                        <ins class="adsbygoogle"
-                             style="display:block"
-                             data-ad-client="ca-pub-9374368296307755"
-                             data-ad-slot="1966797795"
-                             data-ad-format="auto"
-                             data-full-width-responsive="true"></ins>
-                    </div>
-                    
-                    <div class="benefits-grid">tion" content="AI 기반 감정 분석 및 스트레스 관리 테스트로 내 감정 상태를 정확히 확인해보세요. 우울증 자가진단, 멘탈헬스 케어">
+    <meta name="description" content="AI 기반 감정 분석 및 스트레스 관리 테스트로 내 감정 상태를 정확히 확인해보세요. 우울증 자가진단, 멘탈헬스 케어">
     <meta name="keywords" content="심리테스트, 감정분석, 스트레스테스트, 우울증자가진단, 멘탈헬스, 스트레스해소, 심리상담, 감정상태진단">
     <meta name="author" content="테스트프로">
     <meta name="robots" content="index, follow">
