--- a/감정/index.html
+++ b/감정/index.html
@@ -394,8 +394,43 @@
                 </div>
             </div>
 
-            <!-- Step 6: 결과 페이지 (첫 번째 화면) -->
-            <div class="step-page" id="step6">
+            <!-- 로딩 오버레이 -->
+            <div class="loading-overlay hidden" id="loadingOverlay">
+                <div class="loading-animation">
+                    <div class="emotion-scan">
+                        <div class="emotion-icon">🧠</div>
+                        <div class="scan-line"></div>
+                    </div>
+                    <h3 class="loading-title">AI 감정 분석 중...</h3>
+                    <div class="loading-steps">
+                        <div class="step active">감정 상태 스캔</div>
+                        <div class="step">스트레스 수준 측정</div>
+                        <div class="step">멘탈헬스 진단</div>
+                        <div class="step">맞춤 케어 생성</div>
+                    </div>
+                    <div class="loading-bar">
+                        <div class="loading-progress"></div>
+                    </div>
+                    <p class="loading-text">정확한 분석을 위해 잠시만 기다려주세요...</p>
+                </div>
+            </div>
+
+            <!-- 앵커 광고 -->
+            <div class="anchor-ad" id="anchorAd">
+                <button class="anchor-ad-close" onclick="closeAnchorAd()">×</button>
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-9374368296307755"
+                     data-ad-slot="1966797795"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
                 <!-- 페이지 상단 광고 -->
                 <div class="ad-top-native" id="adTopNative6">
                     <div class="ad-label">광고</div>
