--- a/감정/index.html
+++ b/감정/index.html
@@ -225,32 +225,12 @@
                              data-full-width-responsive="true"></ins>
                     </div>
 
-                    <!-- [AD] Infeed 1 - after 3rd question -->
+                    <!-- [AD] Infeed 1 - after 1st question -->
                     <div class="ad-container mid" id="adInfeed1" style="display:none; margin:8px 0; text-align:center;">
                         <ins class="adsbygoogle"
                              style="display:block; min-height:80px; max-height:100px;"
                              data-ad-client="ca-pub-9374368296307755"
                              data-ad-slot="3201247599"
-                             data-ad-format="auto"
-                             data-full-width-responsive="true"></ins>
-                    </div>
-
-                    <!-- [AD] Infeed 2 - after 6th question -->
-                    <div class="ad-container mid" id="adInfeed2" style="display:none; margin:8px 0; text-align:center;">
-                        <ins class="adsbygoogle"
-                             style="display:block; min-height:80px; max-height:100px;"
-                             data-ad-client="ca-pub-9374368296307755"
-                             data-ad-slot="3593134392"
-                             data-ad-format="auto"
-                             data-full-width-responsive="true"></ins>
-                    </div>
-
-                    <!-- [AD] Infeed 3 - after 9th question -->
-                    <div class="ad-container mid" id="adInfeed3" style="display:none; margin:8px 0; text-align:center;">
-                        <ins class="adsbygoogle"
-                             style="display:block; min-height:80px; max-height:100px;"
-                             data-ad-client="ca-pub-9374368296307755"
-                             data-ad-slot="1966797795"
                              data-ad-format="auto"
                              data-full-width-responsive="true"></ins>
                     </div>
