--- a/감정/index.html
+++ b/감정/index.html
@@ -261,6 +261,29 @@
                 </div>
             </div>
 
+            <!-- Before Result Page -->
+            <div class="before-result-page hidden" id="beforeResultPage">
+                <div class="before-result-content">
+                    <h2 class="before-result-title">🎉 분석이 완료되었습니다!</h2>
+                    <p class="before-result-text">당신의 감정 분석 결과를 확인해보세요</p>
+                    
+                    <!-- [AD] Before Result - k-test before result -->
+                    <div class="ad-container result" id="adBeforeResult" style="margin:20px 0; text-align:center;">
+                        <ins class="adsbygoogle"
+                             style="display:block; min-height:120px; max-height:150px;"
+                             data-ad-client="ca-pub-9374368296307755"
+                             data-ad-slot="3593134392"
+                             data-ad-format="auto"
+                             data-full-width-responsive="true"></ins>
+                    </div>
+                    
+                    <button class="view-result-btn" onclick="viewResult()">
+                        <span class="btn-icon">📊</span>
+                        결과 확인하기
+                    </button>
+                </div>
+            </div>
+
             <!-- Result Page -->
             <div class="result-page hidden" id="resultPage">
                 <!-- Step 1: 결과 헤더 -->
