--- a/감정/index.html
+++ b/감정/index.html
@@ -215,8 +215,8 @@
                     
                     <h2 class="question-text"></h2>
                     
-                    <!-- [AD] Infeed 1 - after 1st question -->
-                    <div class="ad-container mid" id="adInfeed1" style="display:none; margin:8px 0; text-align:center;">
+                    <!-- [AD] Infeed 1 - 질문과 답변 사이 -->
+                    <div class="ad-container mid" id="adInfeed1" style="display:block; margin:8px 0; text-align:center;">
                         <ins class="adsbygoogle"
                              style="display:block; min-height:80px; max-height:100px;"
                              data-ad-client="ca-pub-9374368296307755"
