--- a/감정/index.html
+++ b/감정/index.html
@@ -215,12 +215,12 @@
                     
                     <h2 class="question-text"></h2>
                     
-                    <!-- [AD] Infeed 1 - 질문과 답변 사이 -->
-                    <div class="ad-container mid" id="adInfeed1" style="display:block; margin:8px 0; text-align:center;">
+                    <!-- [AD] Infeed 1 - 질문과 답변 사이 (상단 광고와 동일한 조건) -->
+                    <div class="ad-container mid" id="adInfeed1" style="text-align:center; margin:8px 0;">
                         <ins class="adsbygoogle"
-                             style="display:block; min-height:80px; max-height:100px;"
+                             style="display:block; min-height:90px; max-height:100px;"
                              data-ad-client="ca-pub-9374368296307755"
-                             data-ad-slot="3201247599"
+                             data-ad-slot="3593134392"
                              data-ad-format="auto"
                              data-full-width-responsive="true"></ins>
                     </div>
