--- a/감정/index.html
+++ b/감정/index.html
@@ -6,13 +6,8 @@
     <title>감정 분석 테스트 - 나의 진짜 감정 발견하기</title>
     <meta name="description" content="과학적인 심리 분석으로 숨겨진 감정을 발견하세요. 스트레스, 행복, 불안 등 12가지 감정 상태를 정확히 진단합니다">
     <meta name="keywords" content="감정 테스트, 심리 테스트, 감정 분석, 스트레스 테스트, 정신 상태, 심리 상담, 감정 진단, 정신 건강">
-    <meta name="author" content="Test                    </div>
-
-                    <div class="related-tests">
-                        <h3>다른 테스트도 해보세요</h3>
-                        <div class="related-grid">
-                            <a href="../스트레스/" class="related-item">
-                                <div class="related-icon"></div>name="robots" content="index, follow">
+    <meta name="author" content="Test">
+    <meta name="robots" content="index, follow">
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="감정 분석 테스트">
