--- a/에겐/index.html
+++ b/에겐/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
     <!-- [광고] 페이지 상단 (slot: 3201247599) -->
-    <div class="ad-container top" id="adTop" style="text-align:center; margin:8px 0;">
+    <div class="ad-container top" id="adTop" style="text-align:center;">
         <ins class="adsbygoogle"
              style="display:block; min-height:90px; max-height:100px;"
              data-ad-client="ca-pub-9374368296307755"
