--- a/mbtia/intro2.html
+++ b/mbtia/intro2.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MBTI의 4가지 선호 경향 - MBTI 성격 유형 테스트</title>
     <link rel="stylesheet" href="intro-style.css">
+    <!-- 구글 애드센스 -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="intro-container">
@@ -64,11 +66,25 @@
                     </div>
                 </div>
             </div>
+            <!-- 광고 섹션 -->
+            <div class="ad-section">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-9374368296307755"
+                     data-ad-slot="3201247599"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
+
             <div class="navigation-buttons">
                 <button class="prev-btn" onclick="location.href='intro1.html'">이전 페이지</button>
                 <button class="next-btn" onclick="location.href='intro3.html'">다음 페이지</button>
             </div>
         </div>
     </div>
+
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 </body>
 </html>
