--- a/mbtia/intro3.html
+++ b/mbtia/intro3.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>테스트 진행 방법 - MBTI 성격 유형 테스트</title>
     <link rel="stylesheet" href="intro-style.css">
+    <!-- 구글 애드센스 -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
     <script src="intro.js"></script>
 </head>
 <body>
@@ -33,11 +35,25 @@
                     <p>결과는 친구들과 공유할 수 있습니다.</p>
                 </div>
             </div>
+            <!-- 광고 섹션 -->
+            <div class="ad-section">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-9374368296307755"
+                     data-ad-slot="3201247599"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
+
             <div class="navigation-buttons">
                 <button class="prev-btn" onclick="location.href='intro2.html'">이전 페이지</button>
                 <button class="start-test-btn" onclick="location.href='question.html'">테스트 시작하기</button>
             </div>
         </div>
     </div>
+
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 </body>
 </html>
